--- a/Nikola Rabrenovic - Praksa/DVG COMPANY SUBOTICA/index.html
+++ b/Nikola Rabrenovic - Praksa/DVG COMPANY SUBOTICA/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DVG COMPANY</title>
     <link rel="stylesheet" href="./scss/styles.css">
-    <link
-  rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
+<script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+
 </head>
 <body>
     <header>
@@ -48,8 +48,7 @@
                 <span>kontaktirajte nas</span>
             </li>
             <button class="hamburger">
-                <i class="menuIcon material-icons">menu</i>
-                <i class="closeIcon material-icons">close</i>
+               <img src="./img/hamburger.png" alt="">
             </button>
             </ul>
         </div>
@@ -131,42 +130,34 @@
         <h1>Naši proizvodi</h1>
         <p id="paragraph">Naše proizvode DVG Cosmetics odlikuje visok kvalitet kojim se dobija kompletna nega lica I tela. Uspeli smo da uskladimo kvalitet i cenu, što su prepoznali i naši kupci.</p>
 
-     <div class="swiper container2">
-        <div class="swiper-wrapper">
-
-        <div class="swiper-slide"><img src="./img/kese.png" alt="">
-        <p class="kese">KESE I FOLIJE</p>
-        <img class="linija5" src="./img/linija5.png" alt=""></div>
-
-        <div class="swiper-slide"><img src="./img/za_kuhinju.png" alt="">
-        <p class="kuhinja">ZA KUHINJU</p>
+        <!-- Slider main container -->
+        <div class="swiper mySwiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide"><img src="./img/kese.png" alt="">
+            <p class="kese">Kese i folije</p>
+            <img class="linija5" src="./img/linija5.png" alt=""></div>
+              <div class="swiper-slide"><img src="./img/za_kuhinju.png" alt="">
+            <p class="kuhinja">Za kuhinju</p>
         <img class="linija6" src="./img/linija5.png" alt=""></div>
-
-        <div class="swiper-slide"><img src="./img/ubrusi.png" alt="">
-        <p class="ubrusi">UBRUSI I <br> TOALET PAPIRI</p>
+              <div class="swiper-slide"><img src="./img/ubrusi.png" alt="">
+            <p class="ubrusi">Ubrusi</p>
         <img class="linija7" src="./img/linija5.png" alt=""></div>
-
-        <div class="swiper-slide"><img src="./img/kozmetika.png" alt="">
-        <p class="kozmetika">KOZMETIKA</p>
+              <div class="swiper-slide"><img src="./img/kozmetika.png" alt="">
+            <p class="kozmetika">Kozmetika</p>
         <img class="linija8" src="./img/linija5.png" alt=""></div>
-
-        <div class="swiper-slide"><img src="./img/plasticne_kante.png" alt="">
-        <p class="kante">PLASTIČNE KANTE</p>
+              <div class="swiper-slide"><img src="./img/plasticne_kante.png" alt="">
+            <p class="kante">Plasticne kante</p>
         <img class="linija9" src="./img/linija5.png" alt=""></div>
+              <div class="swiper-slide"><img src="./img/cat.png" alt="">
+            <p class="maca">Maca</p>
+        <img class="linija10" src="./img/linija5.png" alt=""></div>
+              <div class="swiper-slide"><img src="./img/dog.jpg" alt="">
+            <p class="kuca">Kuca</p>
+        <img class="linija11" src="./img/linija5.png" alt=""></div>
+            </div>
+            <div class="swiper-pagination"></div>
+          </div>
 
-        <div class="swiper-slide"><img src="./img/dog.jpg" alt="">
-            <p class="kante">DOG</p>
-            <img class="linija9" src="./img/linija5.png" alt=""></div>
-
-        <div class="swiper-slide"><img src="./img/cat.png" alt="">
-            <p class="kante">CAT</p>
-            <img class="linija9" src="./img/linija5.png" alt=""></div>   
-
-        <button class="swiper-button-prev"><img src="./img/arrow-left.png" alt=""></button>
-    <button class="swiper-button-next"><img src="./img/arrow-right.png" alt=""></button>
-        </div>  
-    </div>
-    
     <img src="./img/logo2.png" alt="">
     </section>
     <section class="brands">
