--- a/Nikola Rabrenovic - Praksa/DVG COMPANY SUBOTICA/index.html
+++ b/Nikola Rabrenovic - Praksa/DVG COMPANY SUBOTICA/index.html
@@ -85,7 +85,7 @@
         </div>
     </header>
     <section class="video">
-       <div class="rellax" data-rellax-speed="-5"> <img src="./img/Video.jpg" alt="DVG company"></div>
+       <div> <img src="./img/Video.jpg" alt="DVG company"></div>
     </section>
     <section class="sales">
         <div>
@@ -113,10 +113,10 @@
         </div>
     </section>
     <section class="distribution">
-       <div class="rellax"><img src="./img/distribucija.png" alt=""></div>
+       <div><img src="./img/distribucija.png" alt=""></div>
     </section>
     <section class="pictures">
-        <div class="rellax">
+        <div>
             <img src="./img/ljudi.png" alt="">
             <p>POSTANITE NAS PARTNER</p>
             <img class="line3" src="./img/linija3.png" alt="">
@@ -127,7 +127,7 @@
             <img class="line3" src="./img/linija3.png" alt="">
 
         </div>
-        <div class="rellax">
+        <div>
             <img src="./img/uvoz.png" alt="">
             <p>UVOZ IZ MADJARSKE</p>
             <img class="line3" src="./img/linija3.png" alt="">
