--- a/Nikola Rabrenovic - Praksa/DVG COMPANY SUBOTICA/index.html
+++ b/Nikola Rabrenovic - Praksa/DVG COMPANY SUBOTICA/index.html
@@ -80,7 +80,7 @@
                 </li>
                 </ul>
             <button onclick="myFunction()">
-                <img src="./img/hamburger.png" class="hamburger" alt="">
+                <img src="./img/hamburger.png" class="hamburger" alt="" width="45px">
              </button>
         </div>
     </header>
@@ -91,7 +91,7 @@
         <div>
             <img src="./img/veleprodaja.png" alt="veleprodaja" id="veleprodaja">
         </div>
-        <div>
+        <div class="dvgs">
             <h1 class="dvg">
                 DVG Company
             </h1>
@@ -116,6 +116,7 @@
        <div><img src="./img/distribucija.png" alt=""></div>
     </section>
     <section class="pictures">
+        <div class="pics">
         <div>
             <img src="./img/ljudi.png" alt="">
             <p>POSTANITE NAS PARTNER</p>
@@ -131,7 +132,7 @@
             <img src="./img/uvoz.png" alt="">
             <p>UVOZ IZ MADJARSKE</p>
             <img class="line3" src="./img/linija3.png" alt="">
-
+        </div>
         </div>
     </section>
     <section class="numbers">
@@ -189,7 +190,7 @@
             <div class="swiper-pagination"></div>
           </div>
 
-    <img src="./img/logo2.png" alt="">
+    <img class="logo2" src="./img/logo2.png" alt="">
     </section>
     <section class="brands">
         <p>Istaknuti brendovi za koje radimo distribuciju</p>
