--- a/Nikola Rabrenovic - Praksa/DVG COMPANY SUBOTICA/index.html
+++ b/Nikola Rabrenovic - Praksa/DVG COMPANY SUBOTICA/index.html
@@ -11,6 +11,7 @@
 
 </head>
 <body onload="showModal()">
+    <div class="container-main">
     <header>
         <div id="modalbox">
             <img src="./img/cookie.png" class="cookie" alt="">
@@ -305,5 +306,6 @@ function showModal(){
 
         </script>
     </footer>
+</div>
 </body>
         
